Update README with project details and screenshots